# rules_rust

cargo/private/: cargo_build_script.bzl
rust/: defs.bzl
rust/platform/: triple_mappings.bzl
rust/private/: crate_specs.bzl  providers.bzl  rust.bzl  rust_analyzer.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl
test/unit/rustdoc/: rustdoc_unit_test.bzl
tools/cargo_workspace/: BUILD.bazel  main.rs
tools/crate_specs/: BUILD.bazel  lib.rs
tools/rust_analyzer/: BUILD.bazel  aquery.rs  deps.bzl  lib.rs  main.rs  rust_project.rs
util/: BUILD.bazel
